<resources>
    <string name="message_text_about_app">
        HBFavは、はてなブックマークをタイムライン形式で読むための Android アプリです。
        ご利用中のはてなアカウントのIDを設定してください。
    </string>

    <string name="message_text_before_use_app">
        ※アプリを使う前にはてなブックマーク上で気に入ったユーザーを「お気に入り」に追加しておいてください。
    </string>

    <string name="message_text_empty_favorite">
        お気に入りユーザーのブックマークが見つかりませんでした。お気に入りユーザーを追加した後、再度お試しください。
    </string>

    <string name="message_text_empty_bookmark_user">
        あなたのブックマークはまだ登録されていません。
    </string>

    <string name="message_text_empty_entry">
        表示できるエントリはありません。
    </string>

    <string name="message_text_empty_user">
        この記事をブックマークしているユーザーはいません。
    </string>

    <string name="message_error_input_user_id">
        有効なはてなアカウントを確認できませんでした。※プライベートモードのユーザーはアプリを利用できませんのでご確認ください。
    </string>

    <string name="message_error_network">
        通信に失敗しました。通信状態をご確認の上、再度お試しください。
    </string>
</resources>
