...
                    android:src="@drawable/ic_person_add_36dp"
                    tools:ignore="ContentDescription" />

            </FrameLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/fragment_initialize_layout_hatena_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/fragment_initialize_text_before_use_app"
                android:layout_marginBottom="@dimen/margin_outline"
                android:layout_marginEnd="@dimen/margin_outline"
                android:layout_marginLeft="@dimen/margin_content_from_screen"
                android:layout_marginRight="@dimen/margin_outline"
                android:layout_marginStart="@dimen/margin_content_from_screen"
                android:textColorHint="@color/app_accent_color"
                app:errorText='@{viewModel.idErrorMessage}'>

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/fragment_initialize_edit_hatena_id"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_item_two_column"
                    android:hint="@string/text_hatena_account"
                    android:inputType="text"
                    android:lines="1"
                    android:text="@={viewModel.userId}"
...
