...
    <string name="text_add_comment">コメントを追加</string>
    <string name="text_open">公開</string>
    <string name="text_not_open">非公開</string>
    <string name="text_delete">削除</string>
    <string name="text_share_twitter">Twitterに投稿</string>
    <string name="text_read_after">あとで読む</string>
    <string name="text_progress_loading">Now Loading...</string>

    <string name="button_setting">　 設定 　</string>
    <string name="button_add">　 追加 　</string>
    <string name="button_update">　 更新 　</string>
    <string name="button_cancel">キャンセル</string>

...
